--- a/nord theme.css
+++ b/nord theme.css
@@ -2,7 +2,12 @@
     --textinputs: #343c4c;
     --pagecolor: #2e3440;
     --btn-color: #455981;
-
+    --secondarytext: #FFF;
+    --usertext: #FFF;
+    --redtext: #8c3c4c;
+    --whitetext: #FFF;
+    --bodytext: #FFF;
+    --replytext: #b1b5b9;
     --replybkg: #7646ff;
     --contacts: #7dc5cd;
     --gradientleft: rgba(90, 50, 230, 0.9);
