--- a/nord theme.css
+++ b/nord theme.css
@@ -2,11 +2,11 @@
     --textinputs: #343c4c;
     --pagecolor: #2e3440;
     --btn-color: #455981;
-    --secondarytext: #FFF;
-    --usertext: #FFF;
+    --secondarytext: #f3f0f0;
+    --usertext: #f3f0f0;
     --redtext: #8c3c4c;
-    --whitetext: #FFF;
-    --bodytext: #FFF;
+    --whitetext: #f3f0f0;
+    --bodytext: #f3f0f0;
     --replytext: #b1b5b9;
     --replybkg: #7646ff;
     --contacts: #7dc5cd;
