--- a/nord theme.css
+++ b/nord theme.css
@@ -2,12 +2,12 @@
     --textinputs: #dedede;
     --pagecolor: #2e3440;
     --btn-color: #455981;
-    --secondarytext: #dedede;
-    --usertext: #dedede;
+    --secondarytext: #5e81ac;
+    --usertext: #81a1c1;
     --redtext: #8c3c4c;
     --whitetext: #dedede;
-    --bodytext: #dedede;
-    --replytext: #adadad;
+    --bodytext: #629499;
+    --replytext: #b3dcde;
     --replybkg: #7646ff;
     --contacts: #7dc5cd;
     --gradientleft: rgba(90, 50, 230, 0.9);
