--- a/nord theme.css
+++ b/nord theme.css
@@ -2,7 +2,7 @@
     --textinputs: #dedede;
     --pagecolor: #2e3440;
     --btn-color: #455981;
-    --secondarytext: #5e81ac;
+    --secondarytext: #dedede;
     --usertext: #81a1c1;
     --redtext: #8c3c4c;
     --whitetext: #dedede;
