--- a/nord theme.css
+++ b/nord theme.css
@@ -1,5 +1,5 @@
 :root {
-    --textinputs: #dedede;
+--textinputs: #343c4c;
     --pagecolor: #2e3440;
     --btn-color: #455981;
     --secondarytext: #dedede;
