--- a/nord theme.css
+++ b/nord theme.css
@@ -2,8 +2,8 @@
 --textinputs: #343c4c;
     --pagecolor: #2e3440;
     --btn-color: #455981;
-    --secondarytext: #dedede;
-    --usertext: #81a1c1;
+    --secondarytext: #5e81ac;
+    --usertext: #dedede;
     --redtext: #8c3c4c;
     --whitetext: #dedede;
     --bodytext: #629499;
