--- a/nord theme.css
+++ b/nord theme.css
@@ -2,12 +2,12 @@
     --textinputs: #343c4c;
     --pagecolor: #2e3440;
     --btn-color: #455981;
-    --secondarytext: #ff0000;
-    --usertext: #00cc00;
+    --secondarytext: #ffffff;
+    --usertext: #ffffff;
     --redtext: #8c3c4c;
     --whitetext: #dedede;
-    --bodytext: #ffff00;
-    --replytext: #b3dcde;
+    --bodytext: #ffffff;
+    --replytext: #d9d9d9;
     --replybkg: #7646ff;
     --contacts: #7dc5cd;
     --gradientleft: rgba(90, 50, 230, 0.9);
