--- a/nord theme.css
+++ b/nord theme.css
@@ -2,11 +2,11 @@
     --textinputs: #343c4c;
     --pagecolor: #2e3440;
     --btn-color: #455981;
-    --secondarytext: #c4c1c1;
-    --usertext: #c4c1c1;
+    --secondarytext: #cccccc;
+    --usertext: #cccccc;
     --redtext: #8c3c4c;
     --whitetext: #dedede;
-    --bodytext: #c4c1c1;
+    --bodytext: #cccccc;
     --replytext: #969696;
     --replybkg: #7646ff;
     --contacts: #7dc5cd;
