--- a/nord theme.css
+++ b/nord theme.css
@@ -5,7 +5,7 @@
     --secondarytext: #cccccc;
     --usertext: #cccccc;
     --redtext: #8c3c4c;
-    --whitetext: #dedede;
+    --whitetext: #ff0000;
     --bodytext: #cccccc;
     --replytext: #969696;
     --replybkg: #7646ff;
