--- a/nord theme.css
+++ b/nord theme.css
@@ -2,10 +2,10 @@
     --textinputs: #343c4c;
     --pagecolor: #2e3440;
     --btn-color: #455981;
-    --secondarytext: #cccccc;
-    --usertext: #cccccc;
+    --secondarytext: #ffff00;
+    --usertext: #ff0000;
     --redtext: #8c3c4c;
-    --whitetext: #ff0000;
+    --whitetext: #dedede;
     --bodytext: #cccccc;
     --replytext: #969696;
     --replybkg: #7646ff;
