--- a/nord theme.css
+++ b/nord theme.css
@@ -13,7 +13,8 @@
     --gradientleft: rgba(90, 50, 230, 0.9);
     --gradientright: rgba(173, 83, 240, 0.8);
     --background-secondary-alt: #2e3440 !important;
-    --unread-color: #ffffff;
+	--unread-badge: #eceff499 !important;
+	--unread-background: #eceff402 !important;
 }
 
 .theme-dark {
@@ -143,5 +144,5 @@
 #BLOCKED-tab {
     background-color: var(--pagecolor) !important;
 }
-.unread-36eUEm {
-    background-color: #f3d56a; 
+/* .unread-36eUEm {
+    background-color: #f3d56a;  */
